2001-01-24  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Eskil Olsen  <eskil@eazel.com>

	* Makefile.am:
	Add Makefile.shared to EXTRA_DIST.
	
2001-01-24  Michael Engber  <engber@eazel.com>

	reviewed by: Ramiro Estrugo

	* components/music/nautilus-music-view.c: (add_play_controls):
	Set alignment of playtime so it's flush left, otherwise it jumps
	around slightly.

2001-01-24  Josh Barrow  <josh@eazel.com>

	* icons/i-directory-192.png:
	Removed this file.  This was one of the old GNOME icons, and it
	was no longer in use.

2001-01-24  Michael Engber  <engber@eazel.com>

	reviewed by: Ramiro Estrugo

	* components/music/nautilus-music-view.c:
	(nautilus_music_view_initialize), (add_play_controls):
	Removed a call to problematic call to gtk_widget_set_usize
	and added FIXMEs for the remaining calls to it - bug 5967.

2001-01-24  Darin Adler  <darin@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fix bug 5797 (Critical received when double-clicking on throbber):

	* src/nautilus-window-private.h:
	* src/nautilus-window.c: (location_change_at_idle_callback):
	Callback to do actual location change at idle time instead of
	right inside the property bag callback from the throbber.
	(throbber_location_change_request_callback): Use the new idle
	approach instead of changing the location right away.
	(nautilus_window_destroy): Cancel the idle if it's still
	outstanding.

	* libnautilus-extensions/nautilus-file.c:
	(nautilus_file_get_string_attribute_with_default): Mark a string
	for translation.
	(get_description): Mark some warning strings for translation since
	they are warnings we think real users might see.

	* applets/launcher/.cvsignore:
	* applets/preferences-applet/.cvsignore:
	Ignore some files.
	
2001-01-24  Robin * Slomkowski  <rslomkow@eazel.com>

	* nautilus.spec.in: nautilus-suggested now requires
	mozill-psm and mozilla-mail, updated version
	required for serveral packages.

2001-01-24  Ramiro Estrugo  <ramiro@eazel.com>
